change config to use less cpu

--- a/graylog2/graylog2.jinja2
+++ b/graylog2/graylog2.jinja2
@@ -73,7 +73,7 @@ outputbuffer_processors = 5
 #     High throughput, low latency, higher CPU usage.
 #  - busy_spinning
 #     Avoids syscalls which could introduce latency jitter. Best when threads can be bound to specific CPU cores.
-processor_wait_strategy = sleeping
+processor_wait_strategy = blocking
 
 # Size of internal ring buffers. Raise this if raising outputbuffer_processors does not help anymore.
 # For optimum performance your LogMessage objects in the ring buffer should fit in your CPU L3 cache.
