--- a/essex/keystone.conf.jinja2
+++ b/essex/keystone.conf.jinja2
@@ -2,7 +2,7 @@
 #bind_host = 0.0.0.0
 public_port = 5000
 admin_port = 35357
-admin_token = {{ pillar['admin_token'] }}
+admin_token = {{ pillar['openstack']['SERVICE_TOKEN'] }}
 compute_port = 8774
 verbose = True
 debug = True
