add bind for header

--- a/vim/vimrc.jinja2
+++ b/vim/vimrc.jinja2
@@ -93,3 +93,4 @@ set cc=80
 
 filetype plugin indent on
 autocmd BufWritePre * :%s/\s\+$//e
+nmap <Leader>h ggO# {{ pillar['message_do_not_modify'] }}<Esc>
