--- a/salt/minion.jinja2
+++ b/salt/minion.jinja2
@@ -298,12 +298,12 @@ pillar_roots:
 # The level of messages to send to the console.
 # One of 'garbage', 'trace', 'debug', info', 'warning', 'error', 'critical'.
 # Default: 'warning'
-#log_level: warning
+log_level: debug
 #
 # The level of messages to send to the log file.
 # One of 'garbage', 'trace', 'debug', info', 'warning', 'error', 'critical'.
 # Default: 'warning'
-#log_level_logfile:
+log_level_logfile: debug
 
 # The date and time format used in log messages. Allowed date/time formating
 # can be seen here: http://docs.python.org/library/time.html#time.strftime
